<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/background"
                    android:scaleType="centerCrop"
            />


    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/booli_logo"/>

        <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/middleDescription"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_max="400dp"/>

        <TextView
                android:id="@+id/middleDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:autoSizeTextType="uniform"
                android:text="@string/middle_description"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/bottomDescription"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_max="400dp"/>

        <TextView
                android:id="@+id/bottomDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:autoSizeTextType="uniform"
                android:text="@string/bottom_description"
                android:textAlignment="center"

                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/getStartedButton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_max="400dp"/>

        <Button
                android:id="@+id/getStartedButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/secondary_button_selector"
                android:textColor="@drawable/secondary_button_text_selector"
                android:text="@string/get_started_button"
                android:theme="@style/Button.NoCaps"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="400dp"/>

        <Button
                android:id="@+id/skipButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/secondary_button_selector"
                android:textColor="@drawable/secondary_button_text_selector"
                android:text="Gå till Mina bostäder"
                android:theme="@style/Button.NoCaps"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="400dp"/>
    </LinearLayout>




</android.support.constraint.ConstraintLayout>
